samples/_failures_safe/1761541151_a5d61d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07aea340.c: In function ‘main’:
./samples/SAFE/__tmp_07aea340.c:158:12: error: missing terminating " character
  158 |     printf("\
      |            ^~
./samples/SAFE/__tmp_07aea340.c:158:5: error: expected expression at end of input
  158 |     printf("\
      |     ^~~~~~
./samples/SAFE/__tmp_07aea340.c:158:5: error: expected declaration or statement at end of input
